[LEMS-3708/fix-graphie-preview-overflow] [Image] Fix SvgImage styling so content will not overflow when displaying a preview like graphie images

--- a/packages/perseus/src/styles/perseus-renderer-part-1.css
+++ b/packages/perseus/src/styles/perseus-renderer-part-1.css
@@ -176,6 +176,7 @@ div.graphie {
 .framework-perseus .perseus-rendered-radio .unresponsive-svg-image {
     display: inline-block;
     position: relative;
+    overflow: hidden;
 }
 .framework-perseus .unresponsive-svg-image > .graphie-container,
 .framework-perseus
